# python_test_task

./: .gitignore  locust.py
app/: .env  Dockerfile  alembic.ini  celery_worker.py  dependecy.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: d8b0699b5358_начальное_создание_таблиц.py
app/database/: __init__.py  database.py  models.py
app/handlers/: __init__.py  stats.py
app/repository/: __init__.py  device_stats.py
app/schemas/: __init__.py  requestschemas.py  responseschemas.py
app/service/: __init__.py  device_stats.py
